# FIRST

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  oci-builds.yml
backup-endpoints/: README.md
compute-endpoints/: README.md
compute-endpoints/templates/endpoint_configuration/: README.md  config.yaml  get_endpoints_status.py  submit_task.py  user_config_schema.json  user_config_template.yaml.j2
cron_jobs/: check_application_health.py  direct_health_monitor.py
docs/: CONTRIBUTING.md  index.md
docs/admin-guide/: monitoring.md
docs/admin-guide/deployment/: kubernetes.md  production.md
docs/admin-guide/gateway-setup/: bare-metal.md  configuration.md  docker.md
docs/reference/: citation.md
docs/user-guide/: index.md
fixtures/: clusters.json  endpoints.json
inference_gateway/: settings.py
resource_server_async/: api.py  auth.py  cache.py  globus_utils.py  httpx_client.py  logging.py  services.py  streaming.py
resource_server_async/clusters/: __init__.py  cluster.py  direct_api.py  globus_compute.py  metis.py  minerva.py
resource_server_async/endpoints/: __init__.py  direct_api.py  endpoint.py  globus_compute.py  minerva.py
resource_server_async/schemas/: openai_chat_completions.py  openai_completions.py  openai_embeddings.py
resource_server_async/tests/: mock_utils.py  test_httpx_client.py
resource_server_async/tests/json/: invalid_chat_completions.json
resource_server_async/views/: core.py  sam3.py
