[project]
name = "inference-gateway-backend"
version = "0.2.0"
description = ""
authors = [{ name = "Benoit Cote", email = "bcote@anl.gov" }]
requires-python = "==3.12.6"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Directly imported dependencies for production:
dependencies = [
    "asgiref>=3.10",
    "cachetools<6",
    "django-cors-headers",
    "django-filter",
    "django-ninja",
    "django-redis",
    "django>=5.2.11,<5.3",
    "globus-compute-sdk>=3.16.1,<4",
    "globus-sdk>=3.65.0,<4",
    "gunicorn",
    "h11",
    "httpx",
    "psycopg-pool>=3.2.7,<4",
    "psycopg>=3.2.12,<4",
    "pyjwt>=2.12.0",
    "pydantic>=2.12",
    "pydantic-settings",
    "python-dotenv>=1.2.2,<2",
    "redis<7",
    "requests<3",
    "python-json-logger>=2.0",
    "uvicorn[standard]>=0.30.6",
    "pyzstd",
]

[dependency-groups]

# Dependencies for development/testing:
dev = [
    "mypy",
    "ruff",
    "alcf-ai",
    "pre-commit>=4.5.1",
    "django-stubs[compatible-mypy]",
    "types-PyYAML",
    "types-cachetools",
]

# Documentation dependencies:
docs = [
    "mkdocs-get-deps",
    "mkdocs-material-extensions",
    "mkdocs-material>=9.7.0,<10",
    "mkdocs-minify-plugin<0.9",
    "mkdocs>=1.5.0",
    "pymdown-extensions>=10.0",
]

[tool.uv.sources]
alcf-ai = { workspace = true }

[tool.uv.workspace]
members = ["alcf_ai/"]

[tool.uv.build-backend]
module-name = [
    "resource_server_async",
    "dashboard_async",
    "utils",
    "alcf_ai",
]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "resource_server_async/migrations/*"
]

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["alcf_ai", "resource_server_async", "dashboard_async", "utils"]


[tool.mypy]
files = ["alcf_ai", "inference_gateway", "resource_server_async"]
exclude = [
    '^\..*',
    '__pycache__',
    '\.venv',
    'node_modules',
    '^build/',
    '^dist/',
    'utils/tests/test.*\.py$',
    'resource_server_async/tests/.*.py$',
    '^compute-functions/.*$',
]
python_version = "3.12"
mypy_path = ".venv"
plugins = [
    "pydantic.mypy",
    "mypy_django_plugin.main",
]
strict = true
warn_unused_configs = true        # warn on unused [[tool.mypy.overrides]]
warn_unreachable = true           # ~ reportUnreachable; not in strict
no_implicit_optional = true       # explicit Optional[X], not bare = None

pretty = true
show_error_codes = true
show_column_numbers = true

[tool.django-stubs]
django_settings_module = "inference_gateway._settings_typechecker"
strict_settings = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = ["smart_open"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["resource_server_async.migrations.*", "resource_server_async.management.commands.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.tests.*"
disallow_untyped_defs = true